objects/ssot__CareProgramTeamMember__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareProgramId__c</fullName>
        <label>Care Program</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Category__c</fullName>
        <label>Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Team Member Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberId__c</fullName>
        <label>Member</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberObject__c</fullName>
        <label>Member Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Role__c</fullName>
        <label>Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726239528_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramTeamMember_CareProgramId__rel</label>
        <referenceTo>ssot__CareProgram__dlm</referenceTo>
        <relationshipLabel>CareProgramTeamMember_CareProgramId__rel</relationshipLabel>
        <relationshipName>rel_1716726239528_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726242583_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramTeamMember_MemberId_map_A_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CareProgramTeamMember_MemberId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1716726242583_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726245483_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramTeamMember_MemberId_map_H_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>CareProgramTeamMember_MemberId_map_H_rel</relationshipLabel>
        <relationshipName>rel_1716726245483_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>